DOC-2236: Bring 5 docs changes to new site

--- a/modules/ROOT/pages/advanced/available-menu-items.adoc
+++ b/modules/ROOT/pages/advanced/available-menu-items.adoc
@@ -74,7 +74,8 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: premium
 :pluginname: Comments
-:plugincode: tinycomments
+:plugincode: comments
+:altplugincode: tinycomments
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: opensource
