--- a/modules/ROOT/pages/cloud-deployment-guide/cloud-troubleshooting.adoc
+++ b/modules/ROOT/pages/cloud-deployment-guide/cloud-troubleshooting.adoc
@@ -7,7 +7,7 @@ When {cloudname} detects a problem, it will show an editor notification containi
 
 NOTE: The wording of the notifications shown here may differ from the actual notifications from {cloudname}.
 
-== "This domain is not registered with Tiny Cloud. Please see the quick start guide or create an account."
+== "A valid API key is required, starting 2024, to continue using TinyMCE. Please alert your admin to sign-up to get your free API key."
 
 === Cause
 
@@ -34,7 +34,9 @@ Update the `src` URL to include your (website or application developer's) {cloud
 
 To retrieve your API key, or to sign up for an API key, visit: link:{accountsignup}[{cloudname}].
 
-== "The API key you have entered is invalid. Please review your API key."
+NOTE: Visit our https://www.tiny.cloud/docs/tinymce/6/invalid-api-key/[Invalid API key] page for more information on how to fix an invalid API key with TinyMCE.
+
+== "A valid API key is required, starting 2024, to continue using TinyMCE. Please alert your admin to check the current API key."
 
 === Cause
 
@@ -54,7 +56,9 @@ Check the `apiKey` provided in the script tag:
 * Any other characters that are not in your API key. If you are using variable substitution, ensure that the variable is substituting properly.
 * Matches the API key shown at {accountpageurl}.
 
-== "This domain is not registered with Tiny Cloud. Please review your approved domains."
+NOTE: Visit our https://www.tiny.cloud/docs/tinymce/6/invalid-api-key/[Invalid API key] page for more information on how to fix an invalid API key with TinyMCE.
+
+== "This domain is not registered with Tiny Cloud. To continue using TinyMCE, a registered domain is required, starting 2024. Please alert your admin to review the approved domains and add this one if required."
 
 === Cause
 
@@ -100,3 +104,5 @@ You may also be seeing this notification if you are using the wrong API key. Ens
 === Solution
 
 Either remove the premium plugin from your {productname} configuration, or upgrade your subscription to provide access to that premium plugin.
+
+NOTE: Visit our https://www.tiny.cloud/docs/tinymce/6/invalid-api-key/[Invalid API key] page for more information on how to fix an invalid API key with TinyMCE.
