--- a/modules/ROOT/pages/integrations/jquery.adoc
+++ b/modules/ROOT/pages/integrations/jquery.adoc
@@ -5,7 +5,7 @@
 
 == TinyMCE jQuery integration quick start guide
 
-The https://github.com/tinymce/tinymce/blob/master/modules/tinymce/src/core/main/js/JqueryIntegration.js[Official {productname} jQuery component] integrates TinyMCE into jQuery projects.
+The https://github.com/tinymce/tinymce/release/5.10/blob/master/modules/tinymce/src/core/main/js/JqueryIntegration.js[Official {productname} jQuery component] integrates TinyMCE into jQuery projects.
 This procedure creates a basic jQuery integration containing a {productname} editor based on our xref:demo/basic-example.adoc[Basic example].
 
 === Procedure
