--- a/modules/ROOT/pages/release-notes/release-notes5104.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes5104.adoc
@@ -20,11 +20,11 @@ The following premium plugin updates were released alongside {productname} 5.10.
 
 === Spell Checker Pro 2.5.1
 
-The {productname} 5.10.4 release includes an accompanying release of the **Spell Checker Pro** premium plugin.
+The {productname} 5.10.4 release includes an accompanying release of the _Spell Checker Pro_ premium plugin.
 
-In the previous release, **Spell Checker Pro** would change page focus incorrectly when spellchecking was triggered on multiple editors after a `scroll` event.
+In the previous release, _Spell Checker Pro_ would change page focus incorrectly when spellchecking was triggered on multiple editors after a `scroll` event.
 
-**Spell Checker Pro** 2.5.1, which accompanies this release, corrects this so that the page focus no longer moves in this circumstance.
+_Spell Checker Pro_ 2.5.1, which accompanies this release, corrects this so that the page focus no longer moves in this circumstance.
 
 For information on the Spell Checker Pro plugin, see: xref:plugins/premium/tinymcespellchecker.adoc[Spell Checker Pro plugin].
 
