--- a/modules/ROOT/pages/rtc/events.adoc
+++ b/modules/ROOT/pages/rtc/events.adoc
@@ -3,6 +3,8 @@
 :keywords: rtc events
 :title_nav: RTC Events
 
+include::partial$rtc/admon-rtc-eol.adoc[]
+
 [[rtcclientconnected]]
 == `RtcClientConnected`
 
