--- a/modules/ROOT/pages/rtc/getting-started.adoc
+++ b/modules/ROOT/pages/rtc/getting-started.adoc
@@ -6,6 +6,8 @@
 :pluginname: Real-time Collaboration (RTC)
 :plugincode: rtc
 
+include::partial$rtc/admon-rtc-eol.adoc[]
+
 include::partial$misc/requires_5_9v.adoc[]
 
 This procedure will assist with setting up {productname} with real-time collaboration.
