--- a/modules/ROOT/pages/rtc/how-the-rtc-plugin-encrypts-content.adoc
+++ b/modules/ROOT/pages/rtc/how-the-rtc-plugin-encrypts-content.adoc
@@ -3,4 +3,6 @@
 :keywords: rtc encrypt decrypt key signature
 :title_nav: How RTC encrypts content
 
+include::partial$rtc/admon-rtc-eol.adoc[]
+
 include::partial$rtc/rtc-how-rtc-encryption-works.adoc[]
