--- a/modules/ROOT/pages/rtc/index.adoc
+++ b/modules/ROOT/pages/rtc/index.adoc
@@ -2,3 +2,5 @@
 :description: The TinyMCE Real-time Collaboration plugin
 :title_nav: Real-time Collaboration (RTC)
 :type: folder
+
+include::partial$rtc/admon-rtc-eol.adoc[]
