--- a/modules/ROOT/pages/rtc/introduction.adoc
+++ b/modules/ROOT/pages/rtc/introduction.adoc
@@ -3,6 +3,8 @@
 :keywords: rtc introduction overview
 :title_nav: Introduction
 
+include::partial$rtc/admon-rtc-eol.adoc[]
+
 include::partial$misc/requires_5_9v.adoc[]
 
 include::partial$rtc/rtc-description.adoc[]
