--- a/modules/ROOT/pages/rtc/jwt-authentication.adoc
+++ b/modules/ROOT/pages/rtc/jwt-authentication.adoc
@@ -5,6 +5,9 @@
 
 :pluginname: Real-time Collaboration (RTC)
 :plugincode: rtc
+
+include::partial$rtc/admon-rtc-eol.adoc[]
+
 == Introduction
 
 Real-time Collaboration (RTC) requires setting up JSON Web Token (JWT) authentication. This is to ensure that only authenticated users will be able to access and collaborate on documents.
