--- a/modules/ROOT/pages/rtc/rtc-supported-functionality.adoc
+++ b/modules/ROOT/pages/rtc/rtc-supported-functionality.adoc
@@ -3,6 +3,8 @@
 :keywords: rtc support functionality
 :title_nav: Supported Functionality
 
+include::partial$rtc/admon-rtc-eol.adoc[]
+
 == Browser support
 
 The Real-time Collaboration (RTC) plugin supports the latest desktop versions of:
