--- a/modules/ROOT/pages/rtc/rtc-troubleshooting.adoc
+++ b/modules/ROOT/pages/rtc/rtc-troubleshooting.adoc
@@ -3,7 +3,7 @@
 :keywords: rtc faq trouble troubleshoot troubleshooting bug
 :title_nav: RTC Troubleshooting
 
-This documentation is in progress. Please contact us with any suggestions you think should be here.
+include::partial$rtc/admon-rtc-eol.adoc[]
 
 == Common error messages
 
