--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -275,6 +275,11 @@
 * xref:migration-from-froala.adoc[Migrating from Froala]
 * Release notes for TinyMCE 5
 ** xref:release-notes/6.0-upcoming-changes.adoc[Upcoming changes for TinyMCE 6]
+** xref:release-notes/release-notes5109.adoc[TinyMCE 5.10.9]
+** xref:release-notes/release-notes5108.adoc[TinyMCE 5.10.8]
+** xref:release-notes/release-notes5107.adoc[TinyMCE 5.10.7]
+** xref:release-notes/release-notes5106.adoc[TinyMCE 5.10.6]
+** xref:release-notes/release-notes5105.adoc[TinyMCE 5.10.5]
 ** xref:release-notes/release-notes5104.adoc[TinyMCE 5.10.4]
 ** xref:release-notes/release-notes5103.adoc[TinyMCE 5.10.3]
 ** xref:release-notes/release-notes5102.adoc[TinyMCE 5.10.2]
