--- a/modules/ROOT/pages/rtc/configuration/rtc-options-required.adoc
+++ b/modules/ROOT/pages/rtc/configuration/rtc-options-required.adoc
@@ -6,6 +6,10 @@
 :pluginname: Real-time Collaboration (RTC)
 :plugincode: rtc
 
+include::partial$rtc/admon-rtc-eol.adoc[]
+
+== Required configuration options
+
 The following options are required to use the Real-time Collaboration (RTC) plugin:
 
 * xref:rtc_document_id[`rtc_document_id`]
